Mod: Hide some header files.
Mark internal headers as private and keep only the public API headers in the exported include directory.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,7 @@ add_library(${LIBRARY_NAME}
 
 target_include_directories(${LIBRARY_NAME}
         PUBLIC
-        ../include
+        ../include/lib
 )
 
 # Compiler options.
